src/index.css
:root {
	--frame-color: #CCC;
	--hover-color: #DEF;
	--click-color: #FC8;
	--info-color: #28F;
	--info-stroke-color: #00F;
	--error-color: #F00;
	--error-background-color: #FCC;
	--semi-link-color: #004;
	--inset-background-color: #EEE;
	--file-reader-background-color: #e9e9ed;
	--file-reader-passive-border-color: #888;
	--file-reader-active-border-color: #6A6;
	--tag-key-background-color: #F8F8FF;
	--popup-item-background: #F8F8F8;
	--popup-main-item-background: #FFF;
}
@media (prefers-color-scheme: dark) {
	:root {
		--hover-color: #246;
		--click-color: #A84;
		--info-color: #26B;
		--info-stroke-color: #008;
		--error-color: #C00;
		--error-background-color: #822;
		--semi-link-color: #CCF;
		--inset-background-color: #333;
		--file-reader-background-color: #2b2a33;
		--tag-key-background-color: #223;
		--popup-item-background: #333;
		--popup-main-item-background: #222;
	}
	.leaflet-container {
		background: #888 !important;
	}
	.leaflet-container a {
		color: revert !important;
	}
	.leaflet-popup-content-wrapper {
		background: #222 !important;
		color: revert !important;
	}
}

body > .symbols {
	display: none;
}

.text-side,
.graphic-side {
	position: fixed;
	height: 50%;
	width: 100%;
}
body.flipped .graphic-side,
body.flipped .text-side {
	height: 100%;
	width: 50%;
}
.text-side {
	top: 0;
	left: 0;
	z-index: 1; /* be above photo with blurry backdrop */
	overflow-y: auto; /* scrollbar should appear only for oversized tools panel */
}
.graphic-side {
	bottom: 0;
	right: 0;
}
.text-side {
	display: flex;
	flex-direction: column;
}
.text-side .scrolling {
	overflow-y: scroll;
	flex-grow: 1;
}

time.listened {
	text-decoration: underline dotted 1px;
	color: var(--semi-link-color);
	cursor: pointer;
}
a.listened {
	text-decoration-style: dotted;
	text-decoration-thickness: 1px;
}
a.listened.loading {
	cursor: progress;
}
a.listened.absent {
	text-decoration-color: #A00;
}
a.other-note.absent:active {
	cursor: not-allowed;
}

button.global {
	position: absolute;
	width: 2rem;
	height: 2rem;
	box-sizing: border-box;
	border: none;
	padding: 0;
	background: none;
}
button.global > svg {
	width: 100%;
	height: 100%;
}

.panel {
	position: relative;
	padding: .5rem;
	border-top: solid 1px var(--frame-color);
	border-bottom: solid 1px var(--frame-color);
}
.panel + .panel {
	border-top: none;
}
.panel div {
	margin: .5rem 0;
}
.panel label.inline {
	white-space: nowrap;
}

.panel.fetch {
	padding: .5rem 3rem;
}
.panel.fetch button.reset,
.panel.fetch button.flip {
	top: .5rem;
}
.panel.fetch button.reset:hover,
.panel.fetch button.flip:hover {
	outline: auto;
}
.panel.fetch button.reset {
	right: .5rem;
}
.panel.fetch button.flip {
	left: .5rem;
	--flip-ver-part-visibility: visible;
}
body.flipped .panel.fetch button.flip {
	--flip-ver-part-visibility: hidden;
	--flip-hor-part-visibility: visible;
}
.panel.fetch .request,
.more .request {
	opacity: .7;
	font-size: .9em;
}
.panel.fetch:not(.show-requests) .request,
.more:not(.show-requests) .request {
	display: none;
}

.panel.command {
	--gap: 8px;  /* used in info tips */
	display: flex;
	flex-wrap: wrap;
	gap: var(--gap);
}
.panel.command div,
.panel.command details.tool {
	margin: 0;
	line-height: 1.4em;
}
.panel.command details.tool {
	outline: none;
}
@keyframes tool-ping-fade {
	from {
		outline-color: var(--click-color);
	}
	to {
		outline-color: transparent;
	}
}
.panel.command details.tool.ping {
	animation-name: tool-ping-fade;
	animation-duration: 1s;
	outline-style: solid;
}
.panel.command details.tool summary {
	display: inline;
}
.panel.command details.tool summary::before {
	content: '+';
	display: inline-block;
	width: 1em;
	height: 1em;
	line-height: 1em;
	text-align: center;
}
.panel.command details.tool summary:hover::before {
	background: var(--hover-color);
}
.panel.command details.tool[open] summary::before {
	content: '−';
}
.panel.command details.tool[open] summary::after {
	content: ':';
	width: 1ex;
	display: inline-block;
}
.panel.command details.tool button.info {
	--info-size: 20px;
	--info-height-with-tip: calc(var(--info-size) + var(--gap) + 1px);
	display: inline-block;
	position: relative;
	vertical-align: bottom;
	border: none;
	padding: 0;
	margin: 0;
	background: none;
	width: var(--info-size);
	height: var(--info-size);
	overflow: hidden;
}
.panel.command details.tool button.info > svg {
	position: absolute;
	top: 0;
	left: 0;
	width: var(--info-size);
	height: var(--info-height-with-tip);
}
.panel.command details.tool button.info:not(.open) {
	cursor: help;
}
.panel.command details.tool button.info:hover {
	--tools-info-hover-part-visibility: visible;
}
.panel.command details.tool button.info.open {
	margin-bottom: calc(-1px - var(--gap));
	height: var(--info-height-with-tip);
	--tools-info-tip-part-visibility: visible;
}
.panel.command details.tool button.info.open:hover {
	--tools-info-close-hover-part-visibility: visible;
}
.panel.command details.tool form {
	display: contents;
}
.panel.command details.info {
	width: calc(100% + 1rem);
	display: none;
	margin: 0 -.5rem;
	border-top: solid 1px #AAA;
	border-bottom: solid 1px #AAA;
	padding: 0 .5rem;
	background: var(--inset-background-color);
}
.panel.command details.info p {
	margin: .5rem 0;
}
.panel.command details.info[open] {
	display: block;
}
.panel.command details.info summary {
	display: none;
}
.panel.command [class|=icon] > span {
	display: none;
}
.panel.command [class|=icon] > svg {
	vertical-align: middle;
}
.panel.command button[disabled] [class|=icon] {
	opacity: .5;
}
.panel.command [class|=icon-map] > svg {
	width: 19px;
	height: 13px;
}
.panel.command [class|=icon-notes] > svg {
	width: 9px;
	height: 13px;
}
.panel.command .icon-map-area {
	--tools-map-area-part-visibility: visible;
}
.panel.command .icon-map-center {
	--tools-map-center-part-visibility: visible;
}

.panel input:invalid:not(.no-invalid-indication),
.panel textarea:invalid:not(.no-invalid-indication) {
	border: solid 2px var(--error-color);
	border-radius: 3px;
}
/* ... */

